--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,9 +23,7 @@ twitter: ''
 email: jauthement@mail.missouri.edu
 # phone: 888 888 88 88
 address:
-  street: Professional Building, Room 307 
-  909 University Ave.
-  
+  street: Professional Building, Room 307, 909 University Ave.
   city: Columbia
   region: MO
   postcode: '65201'
