--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,5 +14,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: static/Authement_CV.pdf
+    url: https://jacob-authement.netlify.app/Authement_CV.pdf
     weight: 70
