--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,6 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Teaching
+    url: '#teaching'
+    weight: 20
   - name: Contact Me
     url: '#contact'
     weight: 60
