--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -40,7 +40,7 @@ coordinates:
 contact_links:
   - icon: twitter
     icon_pack: fab
-    name: @Jacob_Authement
+    name: '@Jacob_Authement'
     link: 'https://twitter.com/Jacob_Authement'
 #   - icon: skype
 #     icon_pack: fab
