--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -157,3 +157,4 @@ icon:
   pack:
     ai: true
 showFooter: false
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.0008416703117!2d-92.3288614849214!3d38.94680915163561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87dcb7c12f162fdb%3A0x3e8428fb180903f4!2sProfessional%20Bldg%2C%20909%20University%20Ave%2C%20Columbia%2C%20MO%2065201!5e0!3m2!1sen!2sus!4v1621304268563!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
