--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,9 +21,9 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 address:
-  street: Professional Building, Room 307  
+  street: 'Professional Building, Room 307  
   909 University Avenue  
-  Columbia, MO 65201
+  Columbia, MO 65201'
   city:
   region:
   postcode:
