--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,9 +21,7 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 address:
-  street: [Professional Building  
-  909 University Avenue  
-  Columbia, MO 65201]
+  street: Professional Building                                                         909 University Ave.                                                       
   city: Columbia
   region: MO
   postcode: '65201'
