--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 address:
-  street: Professional Building                                                         909 University Ave.                                                       
+  street: Professional Building, 909 University Avenue
   city: Columbia
   region: MO
   postcode: '65201'
