--- a/data/themes/custom1.toml
+++ b/data/themes/custom1.toml
@@ -5,21 +5,21 @@ name = "custom1"
 light = true
 
 # Primary
-primary = "#0B2161"
+primary = "#220055"
 
 # Menu
-menu_primary = "#E0ECF8"
-menu_text = "#0B2161"
-menu_text_active = "#045FB4"
-menu_title = "#0B2161"
+menu_primary = "#e8daef"
+menu_text = "#220055"
+menu_text_active = "#795f98"
+menu_title = "#220055"
 
 # Home sections
-home_section_odd = "#EFF5FB"
-home_section_even = "#E0ECF8"
+home_section_odd = "#e8daef"
+home_section_even = "#ebdbeb"
 
 # links
-link = "#2980B9"
-link_hover = "#87bfe4"
+link = "#220055"
+link_hover = "#795f98"
 
 [dark]
   link = "#bbdefb"
